Fix workflow ownership and disclosure gating